Add About page for Tal Hadad and link from homepage

--- a/he/index.html
+++ b/he/index.html
@@ -253,6 +253,8 @@
         המטרה שלנו פשוטה:
         לעזור ללקוחות למצוא אתכם — היום, ומחר.
       </p>
+      <br>
+      <a href="./About/" class="cta-button">עוד עלינו</a>
     </section>
 
     <section class="cta-section">
