--- a/index.html
+++ b/index.html
@@ -237,6 +237,8 @@
       <p>
         We focus on one thing: making sure your business is discoverable everywhere your customers search — today and in the future.
       </p>
+      <br>
+      <a href="./About/" class="cta-button">More about us</a>
     </section>
 
     <section class="cta-section">
