Small changes in text for About pages

--- a/About/index.html
+++ b/About/index.html
@@ -279,7 +279,7 @@
         <span class="kicker">Founder story • Results-first marketing</span>
         <h1>Hi, I’m Tal Hadad.</h1>
         <p class="lead">
-          I’m a software engineer turned performance-driven marketer. I built RankMind around one principle:
+          I’m a performance-driven marketer and software engineer. I built RankMind around one principle:
           <strong>real results—calls and conversions—backed by 100% transparency.</strong>
         </p>
 
