--- a/he/About/index.html
+++ b/he/About/index.html
@@ -277,7 +277,7 @@
         <span class="kicker">סיפור המייסד • שיווק מבוסס תוצאות</span>
         <h1>היי, אני טל חדד.</h1>
         <p class="lead">
-          אני מהנדס תוכנה שהפך לאיש שיווק ביצועים. את RankMind בניתי סביב עיקרון אחד:
+          אני איש שיווק ומהנדס תוכנה. את RankMind בניתי סביב עיקרון אחד:
           <strong>תוצאות אמיתיות — שיחות והמרות — עם 100% שקיפות.</strong>
         </p>
 
@@ -293,7 +293,7 @@
         <h2>מהנדסה להשפעה אמיתית בשטח</h2>
 
         <p>
-          היי, קוראים לי <strong>טל חדד</strong>, אני בן 29, במקור מישראל.
+          היי, קוראים לי <strong>טל חדד</strong>, אני בן 30, במקור מישראל.
           מאז שאני זוכר את עצמי, מחשבים וטכנולוגיה היו חלק בלתי נפרד מהחיים שלי.
           אהבתי להבין איך מערכות עובדות — אבל במשך שנים לא באמת ידעתי לאן לנתב את זה.
         </p>
