--- a/index.html
+++ b/index.html
@@ -1,34 +1,79 @@
-<!-- index.html -->
+<!-- /index.html (root) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="index,follow" />
+  <meta name="author" content="RankMind" />
+  <meta name="theme-color" content="#111111" /> <!-- Warrning: 'meta[name=theme-color]' is not supported by Firefox. -->
+  <meta http-equiv="Content-Language" content="en" />
 
-  <meta name="description" content="Professional marketing and SEO services tailored to grow your business online.">
-  <meta name="keywords" content="SEO, Marketing, Website Development, Business Growth, Digital Marketing">
-  <meta name="author" content="RankMind">
-  <link rel="canonical" href="https://www.rankmind.net/">
+  <title>SEO & AI Search Optimization Agency | RankMind</title>
+  <meta
+    name="description"
+    content="RankMind helps businesses grow with SEO, AI search visibility (AEO), paid media, and high-performance websites. Strategy-led execution with measurable outcomes."
+  />
 
-  <meta property="og:title" content="RankMind - Smart Digital Strategy">
-  <meta property="og:description" content="Grow your business with expert SEO and marketing strategies.">
-  <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png"> <!-- create this image Size: 1200×630px (recommended), Content: Logo + tagline + maybe a service image (clean and branded) -->
-  <meta property="og:url" content="https://www.rankmind.net/">
-  <meta property="og:type" content="website">
+  <link rel="canonical" href="https://www.rankmind.net/" />
 
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="RankMind - Smart Digital Strategy">
-  <meta name="twitter:description" content="Expert marketing and SEO services for modern businesses.">
-  <meta name="twitter:image" content="https://www.rankmind.net/Images/share-preview.png">
+  <link rel="alternate" hreflang="en" href="https://www.rankmind.net/" />
+  <link rel="alternate" hreflang="he" href="https://www.rankmind.net/he/" />
+  <link rel="alternate" hreflang="x-default" href="https://www.rankmind.net/" />
 
-  <meta http-equiv="Content-Language" content="en">
+  <meta property="og:site_name" content="RankMind" />
+  <meta property="og:title" content="SEO & AI Search Optimization Agency | RankMind" />
+  <meta
+    property="og:description"
+    content="Grow with SEO, AI search visibility (AEO), paid media, and high-performance websites."
+  />
+  <meta property="og:url" content="https://www.rankmind.net/" />
+  <meta property="og:type" content="website" />
 
-  <title>Marketing Experts | RankMind</title>
-  <link rel="stylesheet" href="./Styles/ui.css">
-  <link rel="stylesheet" href="./Styles/pages.css">
-  <link rel="stylesheet" href="./Styles/index.css">
-  <link rel="stylesheet" href="./Styles/footer.css">
-  <link rel="icon" type="image/x-icon" href="./Images/favicon.ico">
+  <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="RankMind - SEO & AI Search Optimization" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="SEO & AI Search Optimization Agency | RankMind" />
+  <meta
+    name="twitter:description"
+    content="SEO, AI search visibility (AEO), paid media, and high-performance websites."
+  />
+  <meta name="twitter:image" content="https://www.rankmind.net/Images/share-preview.png" />
+
+  <link rel="icon" type="image/x-icon" href="./Images/favicon.ico" />
+
+  <link rel="stylesheet" href="./Styles/ui.css" />
+  <link rel="stylesheet" href="./Styles/pages.css" />
+  <link rel="stylesheet" href="./Styles/index.css" />
+  <link rel="stylesheet" href="./Styles/footer.css" />
+
+  <!-- Structured Data: Organization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "@id": "https://www.rankmind.net/#organization",
+    "name": "RankMind",
+    "url": "https://www.rankmind.net/",
+    "logo": "https://www.rankmind.net/Images/logo.png"
+  }
+  </script>
+
+  <!-- Structured Data: WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "@id": "https://www.rankmind.net/#website",
+    "url": "https://www.rankmind.net/",
+    "name": "RankMind",
+    "publisher": { "@id": "https://www.rankmind.net/#organization" },
+    "inLanguage": "en"
+  }
+  </script>
 </head>
 
 <body>
