Improve ./index.html head section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="index,follow" />
   <meta name="author" content="RankMind" />
-  <meta name="theme-color" content="#111111" /> <!-- Warrning: 'meta[name=theme-color]' is not supported by Firefox. -->
+  <meta name="theme-color" content="#111111" />
   <meta http-equiv="Content-Language" content="en" />
 
   <title>SEO & AI Search Optimization Agency | RankMind</title>
@@ -43,7 +43,11 @@
   />
   <meta name="twitter:image" content="https://www.rankmind.net/Images/share-preview.png" />
 
-  <link rel="icon" type="image/x-icon" href="./Images/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/Images/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/Images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/Images/favicon-16x16.png" />
+  <link rel="apple-touch-icon" href="/Images/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
 
   <link rel="stylesheet" href="./Styles/ui.css" />
   <link rel="stylesheet" href="./Styles/pages.css" />
