--- a/Pricing/index.html
+++ b/Pricing/index.html
@@ -2,33 +2,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="index,follow" />
+  <meta name="author" content="RankMind" />
+  <meta name="theme-color" content="#111111" />
+  <meta http-equiv="Content-Language" content="en" />
 
-  <meta name="description" content="View transparent pricing plans for RankMind's marketing services, built for startups, growing businesses, and enterprise teams.">
-  <meta name="keywords" content="RankMind pricing, SEO cost, marketing plans, digital marketing pricing, service packages">
-  <meta name="author" content="RankMind">
-  <link rel="canonical" href="https://www.rankmind.net/Pricing/">
+  <title>Pricing Plans | SEO & AI Search (AEO) Services | RankMind</title>
+  <meta name="description"
+    content="Transparent pricing for RankMind services—SEO, AI Search Visibility (AEO), content strategy, and performance marketing. Plans for startups, growing teams, and advanced needs." />
 
-  <meta property="og:title" content="RankMind pricing">
-  <meta property="og:description" content="Discover the people and values driving RankMind's marketing expertise.">
-  <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png">
-  <meta property="og:url" content="https://www.rankmind.net/Pricing/">
-  <meta property="og:type" content="website">
+  <link rel="canonical" href="https://www.rankmind.net/Pricing/" />
 
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="RankMind pricing">
-  <meta name="twitter:description" content="View transparent pricing plans for RankMind's marketing services.">
-  <meta name="twitter:image" content="https://www.rankmind.net/Images/share-preview.png">
+  <link rel="alternate" hreflang="en" href="https://www.rankmind.net/Pricing/" />
+  <link rel="alternate" hreflang="he" href="https://www.rankmind.net/he/Pricing/" />
+  <link rel="alternate" hreflang="x-default" href="https://www.rankmind.net/Pricing/" />
 
-  <meta http-equiv="Content-Language" content="en">
+  <meta property="og:site_name" content="RankMind" />
+  <meta property="og:title" content="Pricing Plans | RankMind" />
+  <meta property="og:description"
+    content="Transparent pricing for SEO and AI Search Visibility (AEO), plus content strategy and performance marketing." />
+  <meta property="og:url" content="https://www.rankmind.net/Pricing/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="RankMind - AI Search Visibility & SEO" />
 
-  <title>Pricing | RankMind</title>
-  <link rel="stylesheet" href="../Styles/ui.css">
-  <link rel="stylesheet" href="../Styles/pages.css">
-  <link rel="stylesheet" href="./pricing.css">
-  <link rel="stylesheet" href="../Styles/footer.css">
-  <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Pricing Plans | RankMind" />
+  <meta name="twitter:description"
+    content="View transparent pricing for SEO and AI Search Visibility (AEO), plus content strategy and performance marketing." />
+  <meta name="twitter:image" content="https://www.rankmind.net/Images/share-preview.png" />
+
+  <link rel="icon" type="image/x-icon" href="/Images/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/Images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/Images/favicon-16x16.png" />
+  <link rel="apple-touch-icon" href="/Images/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <link rel="stylesheet" href="../Styles/ui.css" />
+  <link rel="stylesheet" href="../Styles/pages.css" />
+  <link rel="stylesheet" href="./pricing.css" />
+  <link rel="stylesheet" href="../Styles/footer.css" />
+
+  <!-- Structured Data: Organization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "@id": "https://www.rankmind.net/#organization",
+    "name": "RankMind",
+    "url": "https://www.rankmind.net/",
+    "logo": "https://www.rankmind.net/Images/logo.png"
+  }
+  </script>
+
+  <!-- Structured Data: WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "@id": "https://www.rankmind.net/#website",
+    "url": "https://www.rankmind.net/",
+    "name": "RankMind",
+    "publisher": { "@id": "https://www.rankmind.net/#organization" }
+  }
+  </script>
+
+  <!-- Structured Data: OfferCatalog (Pricing page) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "OfferCatalog",
+    "@id": "https://www.rankmind.net/Pricing/#catalog",
+    "name": "RankMind Pricing Plans",
+    "url": "https://www.rankmind.net/Pricing/",
+    "provider": { "@id": "https://www.rankmind.net/#organization" },
+    "inLanguage": "en"
+  }
+  </script>
 </head>
 
 <body>
