--- a/Services/index.html
+++ b/Services/index.html
@@ -2,33 +2,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="index,follow" />
+  <meta name="author" content="RankMind" />
+  <meta name="theme-color" content="#111111" />
+  <meta http-equiv="Content-Language" content="en" />
 
-  <meta name="description" content="Explore RankMind's full range of digital marketing services, including SEO, content strategy, and performance analytics.">
-  <meta name="keywords" content="SEO services, digital marketing, RankMind services, content strategy, performance analytics">
-  <meta name="author" content="RankMind">
-  <link rel="canonical" href="https://www.rankmind.net/Services/">
+  <title>Digital Marketing Services | SEO, AEO & Paid Media | RankMind</title>
+  <meta name="description"
+    content="Explore RankMind's digital marketing services: SEO, AI Search Visibility (AEO), content strategy, technical SEO, and performance-focused growth. Built for measurable outcomes." />
 
-  <meta property="og:title" content="RankMind services">
-  <meta property="og:description" content="Discover the people and values driving RankMind's marketing expertise.">
-  <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png">
-  <meta property="og:url" content="https://www.rankmind.net/Services/">
-  <meta property="og:type" content="website">
+  <link rel="canonical" href="https://www.rankmind.net/Services/" />
 
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="RankMind services">
-  <meta name="twitter:description" content="Explore RankMind's full range of digital marketing services.">
-  <meta name="twitter:image" content="https://www.rankmind.net/Images/share-preview.png">
+  <link rel="alternate" hreflang="en" href="https://www.rankmind.net/Services/" />
+  <link rel="alternate" hreflang="he" href="https://www.rankmind.net/he/Services/" />
+  <link rel="alternate" hreflang="x-default" href="https://www.rankmind.net/Services/" />
 
-  <meta http-equiv="Content-Language" content="en">
+  <meta property="og:site_name" content="RankMind" />
+  <meta property="og:title" content="Digital Marketing Services | RankMind" />
+  <meta property="og:description"
+    content="SEO, AI Search Visibility (AEO), content strategy, technical SEO, and performance marketing—built for measurable outcomes." />
+  <meta property="og:url" content="https://www.rankmind.net/Services/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="RankMind - AI Search Visibility & SEO" />
 
-  <title>Services | RankMind</title>
-  <link rel="stylesheet" href="../Styles/ui.css">
-  <link rel="stylesheet" href="../Styles/pages.css">
-  <link rel="stylesheet" href="./services.css">
-  <link rel="stylesheet" href="../Styles/footer.css">
-  <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Digital Marketing Services | RankMind" />
+  <meta name="twitter:description"
+    content="Explore RankMind's services: SEO, AI Search Visibility (AEO), content strategy, technical SEO, and performance marketing." />
+  <meta name="twitter:image" content="https://www.rankmind.net/Images/share-preview.png" />
+
+  <link rel="icon" type="image/x-icon" href="/Images/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/Images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/Images/favicon-16x16.png" />
+  <link rel="apple-touch-icon" href="/Images/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <link rel="stylesheet" href="../Styles/ui.css" />
+  <link rel="stylesheet" href="../Styles/pages.css" />
+  <link rel="stylesheet" href="./services.css" />
+  <link rel="stylesheet" href="../Styles/footer.css" />
+
+  <!-- Structured Data: Organization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "@id": "https://www.rankmind.net/#organization",
+    "name": "RankMind",
+    "url": "https://www.rankmind.net/",
+    "logo": "https://www.rankmind.net/Images/logo.png"
+  }
+  </script>
+
+  <!-- Structured Data: WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "@id": "https://www.rankmind.net/#website",
+    "url": "https://www.rankmind.net/",
+    "name": "RankMind",
+    "publisher": { "@id": "https://www.rankmind.net/#organization" }
+  }
+  </script>
+
+  <!-- Structured Data: Service (Services page) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "@id": "https://www.rankmind.net/Services/#service",
+    "name": "Digital Marketing Services",
+    "serviceType": [
+      "SEO",
+      "AI Search Visibility (AEO)",
+      "Content Strategy",
+      "Technical SEO",
+      "Performance Marketing"
+    ],
+    "provider": { "@id": "https://www.rankmind.net/#organization" },
+    "url": "https://www.rankmind.net/Services/",
+    "inLanguage": "en"
+  }
+  </script>
 </head>
 
 <body>
