--- a/Contact/index.html
+++ b/Contact/index.html
@@ -2,32 +2,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="index,follow" />
+  <meta name="author" content="RankMind" />
+  <meta name="theme-color" content="#111111" />
+  <meta http-equiv="Content-Language" content="en" />
 
-    <meta name="description" content="Get in touch with RankMind's team to discuss your marketing goals, ask questions, or request a consultation.">
-    <meta name="keywords" content="Contact RankMind, marketing consultation, SEO support, get in touch, contact form">
-    <meta name="author" content="RankMind">
-    <link rel="canonical" href="https://www.rankmind.net/Contact/">
+  <title>Contact RankMind | SEO & AI Search Visibility (AEO)</title>
+  <meta name="description"
+    content="Contact RankMind to discuss SEO, AI Search Visibility (AEO), paid media, or website growth. Share your goals and we’ll help map the fastest path to measurable results." />
 
-    <meta property="og:title" content="Contact RankMind">
-    <meta property="og:description" content="Talk with our team about your business goals and digital strategy">
-    <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png">
-    <meta property="og:url" content="https://www.rankmind.net/Contact/">
-    <meta property="og:type" content="website">
+  <link rel="canonical" href="https://www.rankmind.net/Contact/" />
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Contact RankMind">
-    <meta name="twitter:description" content="Talk to RankMind about your SEO and marketing strategy.">
-    <meta name="twitter:image" content="https://www.rankmind.net/Images/share-preview.png">
+  <link rel="alternate" hreflang="en" href="https://www.rankmind.net/Contact/" />
+  <link rel="alternate" hreflang="he" href="https://www.rankmind.net/he/Contact/" />
+  <link rel="alternate" hreflang="x-default" href="https://www.rankmind.net/Contact/" />
 
-    <meta http-equiv="Content-Language" content="en">
+  <meta property="og:site_name" content="RankMind" />
+  <meta property="og:title" content="Contact RankMind" />
+  <meta property="og:description"
+    content="Talk with our team about SEO, AI Search Visibility (AEO), paid media, and growth strategy." />
+  <meta property="og:url" content="https://www.rankmind.net/Contact/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://www.rankmind.net/Images/share-preview.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="RankMind - AI Search Visibility & SEO" />
 
-    <title>Contact Us | RankMind</title>
-    <link rel="stylesheet" href="../Styles/ui.css">
-    <link rel="stylesheet" href="../Styles/pages.css">
-    <link rel="stylesheet" href="../Styles/footer.css">
-    <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Contact RankMind" />
+  <meta name="twitter:description"
+    content="Reach out to RankMind to discuss SEO, AI Search Visibility (AEO), paid media, and growth strategy." />
+  <meta name="twitter:image" content="https://www.rankmind.net/Images/share-preview.png" />
+
+  <link rel="icon" type="image/x-icon" href="/Images/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/Images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/Images/favicon-16x16.png" />
+  <link rel="apple-touch-icon" href="/Images/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <link rel="stylesheet" href="../Styles/ui.css" />
+  <link rel="stylesheet" href="../Styles/pages.css" />
+  <link rel="stylesheet" href="../Styles/footer.css" />
+
+  <!-- Structured Data: Organization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "@id": "https://www.rankmind.net/#organization",
+    "name": "RankMind",
+    "url": "https://www.rankmind.net/",
+    "logo": "https://www.rankmind.net/Images/logo.png"
+  }
+  </script>
+
+  <!-- Structured Data: WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "@id": "https://www.rankmind.net/#website",
+    "url": "https://www.rankmind.net/",
+    "name": "RankMind",
+    "publisher": { "@id": "https://www.rankmind.net/#organization" }
+  }
+  </script>
+
+  <!-- Structured Data: ContactPage -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ContactPage",
+    "@id": "https://www.rankmind.net/Contact/#contact",
+    "url": "https://www.rankmind.net/Contact/",
+    "name": "Contact RankMind",
+    "isPartOf": { "@id": "https://www.rankmind.net/#website" },
+    "inLanguage": "en"
+  }
+  </script>
 </head>
 
 <body>
